# ief

./: .gitignore  .ptignore  LICENSE  README.md  pkpd.yml  pyproject.toml  requirements.sh  spec-file.txt
data/semi_synthetic/: ss_data.py
data/synthetic/: synthetic_data.py
examples/: model_analyses.ipynb  model_analyses_final.ipynb  model_synthetic.ipynb  viz_samples.ipynb
ief_core/: example_run.yaml  launch_run.py  main_trainer.py
ief_core/configs/: test_config.yaml
ief_core/configs/mm_configs/: fold0.yaml  fold0_baseline.yaml  fold0_gru.yaml  fold0_quad.yaml  fold1.yaml  fold1_baseline.yaml  fold1_gru.yaml  fold2.yaml  fold2_baseline.yaml  fold2_gru.yaml  fold3.yaml  fold3_baseline.yaml  fold3_gru.yaml  fold4.yaml  fold4_baseline.yaml  fold4_gru.yaml
ief_core/configs/ss_configs/: fomm_linear.yaml  rnn_config.yaml  rnn_pkpd_config.yaml  ssm_lin_config.yaml  ssm_pkpd_config.yaml
ief_core/configs/subtype_configs/: sfomm.yaml
ief_core/models/: base.py  base_dummy.py  fomm.py  multi_head_att.py  rnn.py  sfomm.py  utils.py
ief_core/models/iefs/: att_iefs.py  gated.py  logcellkill.py  moe.py  treatexp.py
ief_core/models/ssm/: inference.py  sdmm.py  ssm.py  ssm_baseline.py  ssm_dummy.py
ief_core/tests/: SyntheticExps.ipynb  model_expts.ipynb  short_run.py  simulation_expts.ipynb  sup_baselines.py  test_fomm.py  test_rnn.py  test_sfomm.py  test_ssm.py
ief_core/tests/old_tests/: test_fomm.py
ief_core/yamls/: alaa.yaml  example_run.yaml  lin.yaml  moe.yaml  nl.yaml  trt_comb3_run.yaml  trt_comb4_run.yaml
