[tool.poetry]
name = "ief"
version = "0.1.0"
description = ""
authors = ["Edward De Brouwer <edward.debrouwer@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
torch = "^1.10.0"
optuna = "^2.10.0"
lifelines = "^0.26.3"
sklearn = "^0.0"
torchcontrib = "^0.0.2"
imblearn = "^0.0"
pyro-ppl = "^1.7.0"
ipdb = "^0.13.9"
pytorch-lightning = "1.3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
